[STUDY] - Create my own business card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidMold</string>
+    <string name="hi_i_am_learning">Hi I am learning</string>
 </resources>
